# RNS

./: .gitignore  A5_4.txt  Block_Triagonal_Matrix_Inverse_Test.cpp  CMakeLists.txt  LICENSE  Load_Cerial.cpp  Makefile  Plot_10_500_.cereal  Plot_10_500_0.cereal  README.md  RNS_Load.cpp  RNS_Main.cpp  RNS_Solver  Setup.cpp  Template.chai  Text_Output.h  a.out  main (1).cpp  main.cpp  main_Euler.cpp  main_load.cpp  main_pressure_check.cpp  plot_evolution.plt  test.chai
.cereal_backup/: Plot_20_1000_.cereal  Plot_Euler008_2000_.cereal
ChaiScript/: ChaiScript.cpp  ChaiScript.h
Explicit_Flux_and_Sources/: Centered_Difference.h  HLLE.h  HLLE_Euler.h  Roe_Entropy_Fix.h  Sources.h
Flux_and_Sources/: Centered_Difference.h  Sources.h
Gnuplot_Euler/: Gnuplot_Primitive_Variables.h
Gnuplot_RNS/: Gnuplot_Primitive_Variables.h  Gnuplot_Primitive_Variables_Reduced.h
Grid/: Grid1D.h
High_Mach_Solver/: RK4_High_Mach_Solver.h  RK4_High_Mach_Solver_Backwards.h  a.out  main.cpp
Implicit_Flux_and_Sources/: Create_Implicit_Matrix_Vectors.h  Create_Implicit_Matrix_Vectors_3.h  HLLE.h  HLLE_Flux_Matrix_Entries.h  Implicit_Centered_Difference_2nd_Order.h  Implicit_Centered_Difference_4th_Order.h  Implicit_Euler.h  Implicit_HLLE.h  Variable_Implicit_Scheme.h  Variable_Implicit_Scheme1.h  Variable_Implicit_Scheme_4th_Order.h  Variable_Implicit_Scheme_HLLE.h
Initial_Condition/: Initial_Conditions.h
Low_Mach_Solver/: Gnuplot_RK4.h  RK4_High_Mach_Solver.h  RK4_Low_Mach_Solver.h
Mathematica/: Deflagration_Jump_Conditions.nb  Jump_Conditions_Detonation.nb  Method_of_Manufactured_Solution_TANH.nb  RK4_Low_Mach_Solution.nb  RNS_Implicit.nb  RNS_Implicit_HLLE.nb
Matrix_Inverse/: Block_Triagonal_Matrix_Inverse_Test.cpp  Gaussian_Block_Penagonal_Matrix_Inverse.h  Thomas_Block_Triagonal_Matrix_Inverse.h
Physical_Property/: Non_Dimensional_Navier_Stokes.h
Serialization/: Serialization_Eigen.h  Serialize.h
Solver/: Explicit_Marching.h  Explicit_Marching_Euler.h  Implicit_Marching.h  Implicit_Marching_3PointBackwards.h  Implicit_Marching_4th_Order.h  Implicit_Marching_Generic.h  Marching.h  Solver.h
Tests/: Block_Triagonal_Matrix_Inverse_Test.cpp
Usefull_Headers/: Block_Triagonal_Matrix_Inverse.h  Block_Triagonal_Matrix_Inverse_Test.cpp  Gnuplot_Primitive_Variables.h  Gnuplot_Primitive_Variables0.h  Gnuplot_Variables.h  Handle_Itterative_Lambda.h  Helper_Functions.h  Initial_Conditions.h  Math.h  Read_from_file.h  Reposition_Flame.cpp  Variable_Vector_Isolator.h  Variable_Vector_Isolator_Euler.h
chai/: Le_1_mf_64fl.chai  Pr075_Le1_Q9_b10_g14_CJ.chai  Pr075_Le1_Q9_b15_g14_CJ.chai  Pr075_Le1_Q9_b75_g14_CJ.chai
chai/Pr075_Le1_Q9_b5_g14/: Pr075_Le1_Q9_b5_g14_CJ.chai  Pr075_Le1_Q9_b5_g14_mf005.chai  Pr075_Le1_Q9_b5_g14_mf01.chai  Pr075_Le1_Q9_b5_g14_mf02.chai  Pr075_Le1_Q9_b5_g14_mf03.chai  Pr075_Le1_Q9_b5_g14_mf04.chai  Pr075_Le1_Q9_b5_g14_mf05.chai  Pr075_Le1_Q9_b5_g14_mf06.chai  Pr075_Le1_Q9_b5_g14_mf07.chai  Pr075_Le1_Q9_b5_g14_mf08.chai  Pr075_Le1_Q9_b5_g14_mf09.chai  Pr075_Le1_Q9_b5_g14_mf10.chai  Pr075_Le1_Q9_b5_g14_mf11.chai  Pr075_Le1_Q9_b5_g14_mf12.chai  Pr075_Le1_Q9_b5_g14_mf13.chai  Pr075_Le1_Q9_b5_g14_mf14.chai  Pr075_Le1_Q9_b5_g14_mf15.chai
src/: CMakeLists.txt  Template.chai  main.cpp
src/Gnuplot_RNS/: Gnuplot_Primitive_Variables.h  Gnuplot_Primitive_Variables_Reduced.h  Gnuplot_Variables.h
src/High_Mach_Solver/: Gnuplot_CS.h  RK4_High_Mach_Solver.h  RK4_High_Mach_Solver_Backwards.h  plot.plt
src/Implicit_Flux_and_Sources/: Implicit_Centered_Difference_2nd_Order.h
src/Initial_Condition/: Initial_Conditions.h
src/Low_Mach_Solver/: RK4_High_Mach_Solver.h.gch  plot_evolution.plt
src/Matrix_Inverse/: Gaussian_Block_Triagonal_Matrix_Inverse.h
src/Physical_Property/: Non_Dimensional_Navier_Stokes.h
src/Solver/: Implicit_Marching.h  Solver.h
src/Usefull_Headers/: Handle_Itterative_Lambda.h  Read_from_file.h  Variable_Vector_Isolator.h
